--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name= "description" content= "Totems sanitizantes para manos, automaticos con sensor de temperatura e infrarrojo. Creamos estaciones y torres sanitizantes. Accionar automatico de alcohol en gel y temperatura.">
     <meta name="keywords" content= "dispenser de alcohol, sanitizante de manos, totem sanitizante, dispenser automatico con temperatura, protocolo covid, alcohol en gel, desinfectate de manos, aplicador alcohol, torre sanitizante, desinfeccion de manos,estacion sanitizante">
-    <title>Enter Salud-Totem sanitizantes automáticos de manos y sensor de temperatura.</title>
+    <title>Enter Salud-Totem sanitizantes automáticos de manos y sensor de temperatura. -- EDITADO</title>
     <link rel="shortcut icon" href="./Public/multimedia-entersalud/favicon.ico" type="image/x-icon">
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
